# -Flask-Portfolio

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  example_settings.py  forms.py  requirements.txt  settings.py
.github/workflows/: CD.yml  deploy.yml
backend/: Dockerfile  config.py  core.py  example_settings.py  pyproject.toml  requirements.txt  settings.py  wsgi.py
backend/static/CSS/: index.css
backend/templates/: index.html
nginx/: nginx.conf
static/CSS/: index.css
static/Icons/: favicon.icon
templates/: index.html
