[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kamyrdol32 <kamyrdol32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-mail = "^0.9.1"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
